--- a/modules/fact/client/views/fact-list.client.view.html
+++ b/modules/fact/client/views/fact-list.client.view.html
@@ -1,3 +1,12 @@
-<section>
-  This is the Fact list
+<section data-ng-controller="FactController">
+  <div class="page-header">
+    <h1>Weird History Facts</h1>
+  </div>
+  <div class="list-group">
+    <h4 class="list-group-item-heading">Sample Fact</h4>
+    <p class="list-group-item-text">My First Weird History Fact!</p> 
+    <small class="list-group-item-text">
+      <span>Created by Admin</span>
+    </small> 
+ 
 </section>
