--- a/modules/fact/client/views/fact-list.client.view.html
+++ b/modules/fact/client/views/fact-list.client.view.html
@@ -4,7 +4,8 @@
   </div>
   <div class="list-group">
     <h4 class="list-group-item-heading">Sample Fact</h4>
-    <p class="list-group-item-text">My First Weird History Fact!</p> 
+    <p class="list-group-item-text">My First Weird History Fact! Here I can regail all the massess
+    on the intelligence and weirdness of my weird hi1storical fact!</p> 
     <small class="list-group-item-text">
       <span>Created by Admin</span>
     </small> 
