--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -37,16 +37,16 @@
         </a>
         <ul class="dropdown-menu" role="menu">
           <li ui-sref-active="active">
-            <a ui-sref="settings.profile">Edit Your Profile</a>
+            <a ui-sref="settings.profile">Edit Profile</a>
           </li>
           <li ui-sref-active="active">
-            <a ui-sref="settings.picture">Change Your Profile Picture</a>
+            <a ui-sref="settings.picture">Change Profile Picture</a>
           </li>
           <li ui-sref-active="active" ng-show="authentication.user.provider === 'local'">
-            <a ui-sref="settings.password">Change Your Password</a>
+            <a ui-sref="settings.password">Change Password</a>
           </li>
           <li ui-sref-active="active">
-            <a ui-sref="settings.accounts">Manage Your Social Accounts</a>
+            <a ui-sref="settings.accounts">Manage Social Accounts</a>
           </li>
           <li class="divider"></li>
           <li>
