Changed Home page

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -3,6 +3,7 @@
     <div class="text-center">
     <h1>Welcome to Weird History Facts!</h1>
     <p class="lead">This is the only place to find and post Weird History Facts, Period!</p>
+    <p class="lead">Take a look around and post new facts!</p>
     </div>
   </div>  
     <div class="row">
