Made this site a little more pretty

--- a/modules/articles/client/views/create-article.client.view.html
+++ b/modules/articles/client/views/create-article.client.view.html
@@ -1,6 +1,6 @@
 <section ng-controller="ArticlesController">
   <div class="page-header">
-    <h1>Post a new Weird History Fact</h1>
+    <h1><img src="modules/core/client/img/castle.png" /> Post a new Weird History Fact</h1>
   </div>
   <div class="col-md-12">
     <form name="articleForm" class="form-horizontal" ng-submit="create(articleForm.$valid)" novalidate>
