--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,7 +1,8 @@
 <section ng-controller="HomeController">
   <div class="jumbotron text-center">
     <div class="text-center">
-    <h1>Welcome to Weird History Facts!</h1>
+    <h1><img src="modules/core/client/img/mayflower-icon.png" />Welcome to Weird History Facts!</h1>
+
     <p class="lead">This is the only place to find and post Weird History Facts, Period!</p>
     <p class="lead">Take a look around and post new facts!</p>
     </div>
@@ -9,19 +10,19 @@
     <div class="row">
           <div class="col-md-4">
             <div class="well"> 
-              <h2 class="text-center"><span class="label label-danger">Facts</span></h2>
-              <h1 class="text-center">{{articles.list.length}}</h1>
+              <h2 class="text-center"><span class="label label-primary">Facts</span></h2>
+              <h1 class="text-center">?????</h1>
             </div>
           </div>
           <div class="col-md-4">
             <div class="well"> 
-              <h2 class="text-center"><span class="label label-danger">Users</span></h2>
+              <h2 class="text-center"><span class="label label-primary">Users</span></h2>
               <h1 class="text-center">Updating Daily</h1>
             </div>
           </div>
           <div class="col-md-4">
             <div class="well"> 
-              <h2 class="text-center"><span class="label label-danger">Possibilites</span></h2>
+              <h2 class="text-center"><span class="label label-primary">Possibilites</span></h2>
               <h1 class="text-center">∞</h1>
             </div>
           </div>
