Weird Facts is ONLINE

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -26,5 +26,29 @@
               <h1 class="text-center">∞</h1>
             </div>
           </div>
+           <br>
+            <div class="text-center">
+            <p class="lead">
+                Management System For Our Ever Expanding Team
+            </p>
+            </div>
+            <div class="col-md-3 col-md-offset-3 col-sm-6 col-xs-6">
+            <a href="employees" class="undecorated-link">
+            <div class="dashboard-div-wrapper bk-clr-three">
+                <i class="fa fa-paw fa-3x fa-inverse dashboard-div-icon"></i>
+                <hr />
+                <h4>Employees</h4>
+            </div>
+            </a>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-6">
+            <a href="volunteers" class="undecorated-link">
+            <div class="dashboard-div-wrapper bk-clr-four">
+                <i class="fa fa-paw fa-3x fa-inverse dashboard-div-icon"></i>
+                <hr/>
+                <h4>Volunteers</h4>
+            </div>
+            </a>
+        </div>
     </div><!--/row-->
 </section>
